# haskell-pr

./: LICENSE  PR.cabal  README.md  funs.pr
src/: CommandLine.hs  Evaluator.hs  Interaction.hs  Main.hs  Parser.hs  ParserNew.hs  Syntax.hs  SyntaxNew.hs  Utils.hs
