name:                PR
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jarek Liesen
maintainer:          jliesen@uni-potsdam.com
copyright:           2019 Jarek Liesen
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable PR
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Syntax,
                       Parser,
                       Evaluator,
                       Utils,
                       CommandLine,
                       Interaction
  build-depends:       base >= 4.7 && < 5,
                       transformers >= 0.4,
                       parsec >= 3.0.0.0,
                       containers >= 0.1.0.0
